react-app/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .material-symbols-outlined {
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
  }
  .fill-icon {
    font-variation-settings: 'FILL' 1;
  }
  body {
    min-height: max(884px, 100dvh);
    @apply bg-surface text-on-surface font-body-md selection:bg-primary-container selection:text-on-primary-container antialiased;
  }
}

@layer utilities {
  .hide-scrollbar::-webkit-scrollbar {
    display: none;
  }
  .hide-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
}

